--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -2,7 +2,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: -moz-max-content;
+  height: max-content;
 }
 
 .weather-card {
