--- a/src/components/styles/style.scss
+++ b/src/components/styles/style.scss
@@ -1,74 +1,24 @@
+@import './variables';
+@import './hourly';
+@import './weekly';
+@import './weather';
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: max-content;
+    background: linear-gradient(315deg, #b4ddff 3%, #64b5f6 38%, #1976d2 68%, #42a5f5 98%);
+    animation: gradient 15s ease infinite;
+    background-size: 800% 800%;
 }
 
-.weather-card{
-    background-color: blue;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    padding: 2vw;
-    border-radius: 12px;
-
-
-
-    .main-info {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        h1{
-            font-size: 2.5vw;
-            margin: 0;
-        }
-        h2{
-            font-size: 1.5vw;
-            margin: 0;
-        }
-        p{
-            font-size: 3.5vw;
-            margin: 0;
-        }
-
-        .search-bar{
-            background-color: white;
-            width: 20vw;
-            align-items: center;
-            justify-content: center;
-            height:2.5vw;
-            border-radius: 8px;
-            color:gray;
-            padding: 1vw;
-        }
+@keyframes gradient {
+    0% {
+        background-position: 0% 0%;
     }
-
-    .day-info{
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        background-color: white;
-        color:black;
-        padding: 1.5vw;
-        border-radius: 8px;
-        margin-bottom: 1vw;
+    50% {
+        background-position: 100% 100%;
     }
-
-    .day-t-list{
-        display: flex;
-        flex-direction: row;
-    }
-
-    .week-info{
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        background-color: white;
-        color:black;
-        padding: 1.5vw;
-        border-radius: 8px;
+    100% {
+        background-position: 0% 0%;
     }
 }
+
+
