oprava komponenty WeaklyWeather

--- a/src/components/styles/_variables.scss
+++ b/src/components/styles/_variables.scss
@@ -1,5 +1,5 @@
-$primary-color: #D6EDFF;
-$secondary-color: #e3f2fd;
+$primary-color: #d2ebff;
+$secondary-color: rgba(255, 255, 255, 0.30);
 $text-color: #002846;
 $custom-light-gray: #F0F0F0;
 $custom-dark-gray: #3B3B3B;
