--- a/src/components/styles/_hourly.scss
+++ b/src/components/styles/_hourly.scss
@@ -6,7 +6,7 @@
     list-style: none;
     margin: 1vw;
     border-radius: 15px;
-    background-color: rgba(255, 255, 255, 0.30); 
+    background-color: $secondary-color; 
 }
 
 .day-t-item {
