--- a/src/components/styles/_weekly.scss
+++ b/src/components/styles/_weekly.scss
@@ -1,7 +1,7 @@
 .week-info{
     display: flex;
     flex-direction: row;
-    background-color: rgba(255, 255, 255, 0.30); 
+    background-color: $secondary-color; 
     color:black;
     padding: 1.5vw;
     border-radius: 8px;
@@ -11,15 +11,16 @@
 
 .week-t-list{
     margin: 1vw;
+    width: 100%;
 }
 .week-t-item{
-    width: 10vw;
-    justify-content: center;
-    align-items: center ;
+    width: 100%;
 }
+
 .week-container{
     display: flex;
-    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
+    border-bottom: $secondary-color 1px solid;
 }
