--- a/src/components/styles/style.scss
+++ b/src/components/styles/style.scss
@@ -5,19 +5,20 @@
 
 body {
     background: linear-gradient(315deg, #b4ddff 3%, #64b5f6 38%, #1976d2 68%, #42a5f5 98%);
-    animation: gradient 15s ease infinite;
-    background-size: 800% 800%;
+    animation: gradient 17s ease infinite;
+    background-size: 400% 400%;
+    margin: none;
 }
 
 @keyframes gradient {
     0% {
-        background-position: 0% 0%;
+        background-position: 0% 40%;
     }
     50% {
-        background-position: 100% 100%;
+        background-position: 100% 40%;
     }
     100% {
-        background-position: 0% 0%;
+        background-position: 0% 40%;
     }
 }
 
