--- a/src/components/styles/_hourly.scss
+++ b/src/components/styles/_hourly.scss
@@ -28,5 +28,7 @@
     overflow: hidden;
     justify-content: center;
     align-items: center;
-    color: $text-color;
+}
+.scroll{
+    font-size: 3vw;
 }
