--- a/src/components/styles/style.scss
+++ b/src/components/styles/style.scss
@@ -8,6 +8,7 @@ body {
     animation: gradient 17s ease infinite;
     background-size: 400% 400%;
     margin: none;
+    font-family: 'Roboto', sans-serif;
 }
 
 @keyframes gradient {
