--- a/src/components/styles/_weather.scss
+++ b/src/components/styles/_weather.scss
@@ -23,16 +23,23 @@
         font-size: 1.5vw;
         margin: 0;
     }
+
+    img{
+        width: 10vw;
+        height: 10vw;
+    }
     p{
-        font-size: 3.5vw;
+        font-size: 4vw;
         margin: 0;
     }
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 0.5vw;
-    padding: 2vw;   
+    padding: 1vw;
+
 }
 .search-bar{
     background-color: rgba(255, 255, 255, 0.40); 
@@ -41,7 +48,29 @@
     justify-content: center;
     height:2.5vw;
     border-radius: 8px;
+    border: none;
     color:white;
-    padding: 1vw;
+    padding: 0vw 1vw;
     margin: 1vw 3vw;
 }
+.weather-details{
+    display: flex;
+    flex-direction: row;
+    gap: 1vw; 
+    
+    p{
+        font-size: 1.5vw;
+        margin: 0;
+    }
+
+    .details-item{
+        display: flex;
+        flex-direction: row;
+        gap: 0.2vw;
+        .details-icon{
+            font-size: 1.5vw;
+        }
+
+    }
+}
+
