--- a/src/components/styles/_weekly.scss
+++ b/src/components/styles/_weekly.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: row;
     background-color: $secondary-color; 
-    color:black;
     padding: 1.5vw;
     border-radius: 8px;
     margin: 1vw 3vw
@@ -15,12 +14,23 @@
 }
 .week-t-item{
     width: 100%;
+    justify-content: center;
+    align-items: center;
+    list-style-type: none;
 }
 
 .week-container{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     width: 100%;
-    justify-content: space-evenly;
+    justify-content:space-between;
+    gap: 2vw;
     align-items: center;
     border-bottom: $secondary-color 1px solid;
+}
+
+.wind-speed{
+    display: flex;
+    flex-direction: row;
+    gap: 1vw
 }
