--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -29,14 +29,16 @@
   overflow: hidden;
   justify-content: center;
   align-items: center;
-  color: #002846;
+}
+
+.scroll {
+  font-size: 3vw;
 }
 
 .week-info {
   display: flex;
   flex-direction: row;
   background-color: rgba(255, 255, 255, 0.3);
-  color: black;
   padding: 1.5vw;
   border-radius: 8px;
   margin: 1vw 3vw;
@@ -49,14 +51,25 @@
 
 .week-t-item {
   width: 100%;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
 }
 
 .week-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   width: 100%;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  gap: 2vw;
   align-items: center;
   border-bottom: rgba(255, 255, 255, 0.3) 1px solid;
+}
+
+.wind-speed {
+  display: flex;
+  flex-direction: row;
+  gap: 1vw;
 }
 
 .weather-card {
@@ -80,7 +93,7 @@
   align-items: center;
   justify-content: center;
   gap: 0.5vw;
-  padding: 2vw;
+  padding: 1vw;
 }
 .main-container h1 {
   font-size: 2.5vw;
@@ -90,8 +103,12 @@
   font-size: 1.5vw;
   margin: 0;
 }
+.main-container img {
+  width: 10vw;
+  height: 10vw;
+}
 .main-container p {
-  font-size: 3.5vw;
+  font-size: 4vw;
   margin: 0;
 }
 
@@ -102,9 +119,28 @@
   justify-content: center;
   height: 2.5vw;
   border-radius: 8px;
+  border: none;
   color: white;
-  padding: 1vw;
+  padding: 0vw 1vw;
   margin: 1vw 3vw;
+}
+
+.weather-details {
+  display: flex;
+  flex-direction: row;
+  gap: 1vw;
+}
+.weather-details p {
+  font-size: 1.5vw;
+  margin: 0;
+}
+.weather-details .details-item {
+  display: flex;
+  flex-direction: row;
+  gap: 0.2vw;
+}
+.weather-details .details-item .details-icon {
+  font-size: 1.5vw;
 }
 
 body {
@@ -112,6 +148,7 @@ body {
   animation: gradient 17s ease infinite;
   background-size: 400% 400%;
   margin: none;
+  font-family: "Roboto", sans-serif;
 }
 
 @keyframes gradient {
